crates/smart-config/tests/ui/derives/cannot_derive_default_enum_field.rs
use smart_config::DescribeConfig;

#[derive(DescribeConfig)]
#[config(tag = "version", derive(Default))]
enum TestConfig {
    V0,
    #[config(default)]
    V1 { value: u64 },
}

fn main() {}
